# fish-begol

./: .clang-format  .gitignore  CMakeLists.txt  COPYING  Makefile  README.md  README.md.anon  avx.h  config.h.in  hashing_util.c  hashing_util.h  io.c  io.h  lowmc.c  lowmc.h  lowmc_pars.c  lowmc_pars.h  main.c  mpc.c  mpc.h  mpc_lowmc.c  mpc_lowmc.cpp  mpc_lowmc.h  mpc_test.c  mpc_test.h  multithreading.c  multithreading.h  mzd_additional.c  mzd_additional.h  mzd_shared.c  mzd_shared.h  parameters.h  randomness.c  randomness.cpp  randomness.h  signature_bg.c  signature_bg.h  signature_common.c  signature_common.h  signature_fis.c  (+4 more)
cmake/: Findm4ri.cmake
compat/: CMakeLists.txt  aligned_alloc.c  compat.h
lowmc/: .gitignore  lowmc.cpp  lowmc.h
timing/: .gitignore  Makefile  graphs.py  lowmc-inst-128-128-128.txt  lowmc-inst-128-128-d=1.txt  lowmc-inst-192-192-192.txt  lowmc-inst-256-256-256.txt  lowmc-inst-256-256-d=1.3.txt  lowmc-inst-256-256-d=1.txt  lowmc-inst-512-512-512.txt  nonce-lowmc-128-128-d=1.txt  nonce-lowmc-128-d=1.txt  nonce-lowmc-128.txt  nonce-lowmc-192-192-d=1.txt  nonce-lowmc-192.txt  nonce-lowmc-256-256-d=1.txt  nonce-lowmc-256.txt  nonce-lowmc-320.txt  nonce-lowmc-384-384-d=1.txt  nonce-lowmc-384.txt  nonce-lowmc-448.txt  nonce-lowmc-512-512-d=1.txt  nonce-lowmc-512.txt  pq-lowmc-inst-256-256-256.txt  pq-lowmc-inst-256.txt  pq-lowmc-inst-384-384-384.txt  pq-lowmc-inst-384-384.txt  pq-lowmc-inst-384.txt  pq-lowmc-inst-512.txt  style.json  timing.m  timing.py
zkboo/MPC_SHA1/: Makefile
zkboo/MPC_SHA256/: .gitignore  MPC_SHA256.c  MPC_SHA256_VERIFIER.c  Makefile
